spring cleanup in octorber

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -4,7 +4,7 @@
 $term=kitty
 $floating_term=alacritty
 $editor=code
-$notes=logseq
+$notes=kitty --class Notes -e nvim ~/Documents/Cloud/Notes/notes-"$(date +%Y%d%m%H%M)".md
 $mailer=thunderbird
 $browser=firefox
 $filemanager=dolphin
@@ -26,6 +26,7 @@ $torrent=qbittorrent
 #-- Output ---------------------------------------------------------------
 monitor=HDMI-A-1,1920x1080@60,0x0,1
 monitor=DP-1,1920x1080@60,0x0,1
+
 #-- Configuration --------------------------------------------------------
 input {
     kb_layout=tr
@@ -38,12 +39,11 @@ input {
     follow_mouse=1
     repeat_delay=250
     repeat_rate=30
+    sensitivity=1.0
 #    disable_while_typing=1
 }
 
 general {
-    sensitivity=1.0
-
     gaps_in=4 #8
     gaps_out=8 #10
 
@@ -53,6 +53,7 @@ general {
 
     damage_tracking=full
 
+    layout=dwindle
 }
 
 misc {
@@ -76,26 +77,29 @@ decoration {
     # the more passes, the more you can up the blur_size without noticing artifacts.
     
     blur_new_optimizations=true
+    blur_ignore_opacity=true
+ 
+    drop_shadow=true
+    shadow_range=6
+    shadow_ignore_window=false
+
+    dim_inactive=true
+    dim_strength=0.3
+
 }
 
 animations {
     enabled=1
 
-    animation=windows,1,3,default
-    animation=fadeIn,1,3,default
-    animation=workspaces,1,3,default,slide
-    animation=border,1,3,default
-
-    #bezier=my_curve,0.85, 0, 0.15, 1
+    animation=windows,1,4,default,slide
+    animation=border,1,4,default
+    animation=fade,1,4,default
+    animation=workspaces,1,4,default,slide
+ 
     #animation=windows,1,5,my_curve
     #animation=windowsMove,1,5,default
     #animation=fade,1,10,default
     #animation=workspaces,1,6,my_curve
-
-    #animation=windows,1,3,default
-    #animation=borders,1,3,default
-    #animation=fadein,1,3,default
-    #animation=workspaces,1,3,slide
 }
 
 binds {
@@ -119,14 +123,15 @@ dwindle {
 #windowrule=pseudo,abc
 #windowrule=monitor 0,xyz
 
-windowrule=float,title:Friends List
+windowrulev2,float,class:^(Steam)$,title:^(Friends List)$
+windowrulev2,float,class:^(sysupdate)$,title:(^sysupdate)$
+
+
 windowrule=float,wofi
 windowrule=float,Alacritty
 windowrule=float,zoom
 windowrule=float,nwg-look
 windowrule=float,org.gnome.Settings
-windowrule=float,Pcmanfm
-windowrule=float,imv
 windowrule=float,nwg-panel
 windowrule=float,Lxappearance
 windowrule=float,obs
@@ -137,12 +142,12 @@ windowrule=float,xfce-polkit
 windowrule=float,mpv
 windowrule=float,nm-connection-editor
 windowrule=float,title:^(Picture-in-Picture)$
-windowrule=float,^(sysupdate)$
 windowrule=float,blueman-manager
 windowrule=float,title:^(Nextcloud)$
 windowrule=float,solaar
-windowrule=float,NVIM
+windowrule=float,^(Notes)$
 windowrule=float,org.kde.gwenview
+
 
 windowrule=size 1000 800,wdisplays
 windowrule=size 1440 720,mpv
@@ -150,7 +155,7 @@ windowrule=size 1280 720,title:^(Picture-in-Picture)$
 windowrule=size 650 400,sysupdate
 windowrule=size 590 850,title:^(Nextcloud)$
 windowrule=size 847 595,solaar
-windowrule=size 1000 800,NVIM
+windowrule=size 1000 800,^(Notes)$
 
 windowrule=center,xfce-polkit
 windowrule=center,^(discord)$
@@ -166,28 +171,35 @@ windowrule=center,title:^(Steam)$
 windowrule=center,mpv
 windowrule=center,title:^(Nextcloud)$
 windowrule=center,solaar
-windowrule=center,NVIM
+windowrule=center,^(Notes)$
 
 windowrule=opacity 0.90,kitty
 windowrule=opacity 0.90,Alacritty
-windowrule=opaque,^(gamescope)$ 
+windowrule=opaque,StardewModdingAPI
+windowrule=opaque,sysupdate
+windowrulev2=opaque,class:^(gamescope)$,title:^(gamescope)$
+windowrule=opaque,^(Notes)$
 
 windowrule=noblur,gamescope
 windowrule=noblur,StardewModdingAPI
 
 
-windowrule=opaque,StardewModdingAPI
-windowrule=opaque,sysupdate
-windowrule=opaque,NVIM
-windowrule=opaque,title:^(.*NVIM)$
-windowrule=opaque,gamescope
 
 windowrule=pin,title:^(Picture\-in\-Picture)$
+
+windowrulev2 = tile, class:^(Spotify)$
+
+windowrule=float, com-group_finity-mascot-Main
+windowrule=noblur, com-group_finity-mascot-Main
+#windowrule=nofocus, com-group_finity-mascot-Main
+windowrule=noshadow, com-group_finity-mascot-Main
+windowrule=noborder, com-group_finity-mascot-Main
+
 
 #-- App Bindings ---------------------------------------------------------
 bind=SUPER,Return,exec,$term
 bind=SUPERSHIFT,return,exec,$floating_term
-bind=SUPERSHIFT,Y,exec,$floating_term --class NVIM -e nvim
+bind=SUPERSHIFT,Y,exec,$notes
 bind=SUPER,D,exec,wofi --show run
 bind=SUPERSHIFT,n,exec,swaync-client -t -sw
 
@@ -200,7 +212,7 @@ bind=SUPER,F6,exec,$mailer
 bind=SUPER,F7,exec,$videcon
 bind=SUPER,F8,exec,$calendar
 
-# Exitting and Locking
+# Exiting and Locking
 bind=SUPER,E,exec,wlogout -p layer-shell
 bind=SUPERSHIFT,E,exec,pkill Hyprland
 bind=SUPERSHIFT,L,exec,$lock
@@ -213,30 +225,25 @@ bind=SUPERALT,space,exec,playerctl play-pause
 bind=SUPERALT,bracketright,exec,playerctl next
 bind=SUPERALT,bracketleft,exec,playerctl previous
 
-#binde=,XF86AudioRaiseVolume,exec,pactl set-sink-volume @DEFAULT_SINK@ +5%
-#binde=,XF86AudioLowerVolume,exec,pactl set-sink-volume @DEFAULT_SINK@ -5%
-
 binde=,XF86AudioRaiseVolume,exec,wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+ && wpctl get-volume @DEFAULT_AUDIO_SINK@ | ~/.config/hypr/scripts/wobFormat > $wobpipe
 binde=,XF86AudioLowerVolume,exec,wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%- && wpctl get-volume @DEFAULT_AUDIO_SINK@ | ~/.config/hypr/scripts/wobFormat > $wobpipe
-
 bind=,XF86AudioMute,exec,pactl set-sink-mute @DEFAULT_SINK@ toggle
 bind=,XF86AudioMicMute,exec,pactl set-source-mute @DEFAULT_SOURCE@ toggle
-binde=,XF86MonBrightnessDown,exec,brightnessctl set 10%-
-binde=,XF86MonBrightnessUp,exec,brightnessctl set +10%
+
+binde=,XF86MonBrightnessDown,exec,brightnessctl set 5%-
+binde=,XF86MonBrightnessUp,exec,brightnessctl set +5%
+
 bind=,XF86AudioPlay,exec,playerctl play-pause
+bindl=,XF86AudioStop,exec,playerctl stop
 bind=,XF86AudioNext,exec,playerctl next
 bind=,XF86AudioPrev,exec,playerctl previous
 
 bind=,Print,exec,grim -g "$(slurp)" - | wl-copy -t image/png && notify-send "Screenshot copied to clipboard!"
-bind=CTRLSHIFT,F,exec,hyprctl keyword animation "fadeOut,0,8,slow" && grim -g "$(slurp -c ff00ff88 -b ffcce622)" && wl-copy < ~/Pictures/$(ls ~/Pictures/ -t | head -n 1) && notify-send "Saved & Copied!" && hyprctl keyword animation "fadeOut,1,8,slow"
-#bind=SUPER,Print,exec,grim - | wl-copy && notify-send 'Screenshot Copied to Clipboard'
 bind=SUPER,Print,exec,grim -g "$(slurp)" - | swappy -f -
+bind=CTRLSHIFT,F,exec,hyprctl keyword animation "fadeOut,0,8,slow" && grim -g "$(slurp -c 00000088 -b ffffff22)" && wl-copy < ~/Pictures/$(ls ~/Pictures/ -t | head -n 1) && notify-send "Saved & Copied!" && hyprctl keyword animation "fadeOut,1,8,slow"
 
-#bind=SUPER,print,exec,grim ~/Pictures/screenshot_$(date +%Y%m%d_%H%M%S).png && notify-send "Screenshot saved"
-#bind=SUPERSHIFT,print,exec,notify-send "Recording started" ; mwf-recorder -g "$(slurp)" -f ~/Movies/recording-"$(date +%d/%m/%h (%T))".mp4 || notify-send "Recording failed!"
-#bind=SUPERSHIFT,R,exec,~/.config/hypr/scripts/screenrecord.sh wl
-#bind=SUPERALT,R,exec,~/.config/hypr/scripts/screenrecord.sh wlsw
-#bind=SUPERCTRL,R,exec,~/.config/hypr/scripts/screenrecord.sh kill
+bind=,XF86Display,exec,wdisplays
+bind=,XF86Calculator,exec,QT_QPA_PLATFORMTHEME=qt5ct kcalc
 
 #-- General Window Operations --------------------------------------------
 bind=SUPER,space,togglefloating,
@@ -248,7 +255,6 @@ bind=SUPER,F,fullscreen,
 bind=SUPER,X,exec,farge --notify
 bind=SUPER,O,toggleopaque,
 bind=SUPERSHIFT,Q,killactive,
-#bind=,XF86Display,exec,wdisplays
 
 #-- Window Focus & Moves -------------------------------------------------
 bindm=SUPER,mouse:272,movewindow
@@ -280,10 +286,11 @@ bind=SUPER,backspace,workspace,12
 bind=SUPER,right,workspace,m+1
 bind=SUPER,left,workspace,m-1
 
-#bindm=SUPER,mouse:276,workspace,m+1
-#bindm=SUPER,mouse:275,workspace,m-1
 bind=SUPER,mouse:276,workspace,m+1
 bind=SUPER,mouse:275,workspace,m-1
+
+bind=SUPER,mouse_down,workspace,e+1
+bind=SUPER,mouse_up,workspace,e-1
 
 #-- Focus Monitors -------------------------------------------------------
 bind=SUPERSHIFT,up,focusmonitor,u
@@ -331,32 +338,28 @@ bind=SUPERSHIFT,S,workspaceopt,allfloat
 bind=SUPERSHIFT,KP_Multiply,movetoworkspace,special
 bind=SUPER,KP_Multiply,togglespecialworkspace,
 
-bind=SUPERCTRL,left,resizeactive,-20 0
-bind=SUPERCTRL,right,resizeactive,20 0
-bind=SUPERCTRL,up,resizeactive,0 -20
-bind=SUPERCTRL,down,resizeactive,0 20
+binde=SUPERCTRL,left,resizeactive,-20 0
+binde=SUPERCTRL,right,resizeactive,20 0
+binde=SUPERCTRL,up,resizeactive,0 -20
+binde=SUPERCTRL,down,resizeactive,0 20
 
 bind=ALT,TAB,workspace,previous
 
 #-- Automatically Move Windows to Workspaces -----------------------------
-windowrule=workspace 1 silent,firefox
-windowrule=workspace 2 silent,dolphin
-windowrule=workspace 3 silent,^(discord)$
-windowrule=workspace 3 silent,title:^(Discord Updater)$
-windowrule=workspace 4 silent,^(spotify)$
-windowrule=workspace 5 silent,libreoffice
-windowrule=workspace 6 silent,thunderbird
-windowrule=workspace 6 silent,kalendar
-windowrule=workspace 7 silent,^(zoom)$
-windowrule=workspace 8 silent,^(gamescope)$
-windowrule=workspace 9 silent,^(Steam)$
-windowrule=workspace 9 silent,title:^(Steam)$
-windowrule=workspace 9 silent,title:^(Friends List)$
-windowrule=workspace 10 silent,krita
-windowrule=workspace 11 silent,^(org.qbittorrent.qBittorrent)$
-windowrule=workspace 12 silent,title:^(Nextcloud)$
-windowrule=workspace 12 silent,com.nextcloud.desktopclient.nextcloud
-#movecursortocorner,3
+windowrulev2=workspace 1 silent,class:firefox
+windowrulev2=workspace 2 silent,class:dolphin
+windowrulev2=workspace 3 silent,class:^(discord)$,title:^(Discord Updater)$
+windowrulev2=workspace 4 silent,class:^(spotify)$
+windowrulev2=workspace 5 silent,class:libreoffice
+windowrulev2=workspace 6 silent,class:thunderbird
+windowrulev2=workspace 6 silent,class:kalendar
+windowrulev2=workspace 7 silent,class:^(zoom)$
+windowrulev2=workspace 8 silent,class:^(gamescope)$
+windowrulev2=workspace 9 silent,class:^(Steam)$,title:^(Steam)$
+windowrulev2=workspace 9 silent,class:^(Steam)$,title:^(Friends List)$
+windowrulev2=workspace 10 silent,class:krita
+windowrulev2=workspace 11 silent,class:^(org.qbittorrent.qBittorrent)$
+windowrulev2=workspace 12 silent,class:^(com.nextcloud.desktopclient.nextcloud)$,title:^(Nextcloud)$
 
 #-- Startup --------------------------------------------------------------
 
@@ -388,10 +391,11 @@ exec-once=solaar --window=hide
 
 # clipboard
 #exec-once=wl-clipboard-history -t
+exec-once=wl-clip-persist --clipboard regular
 exec-once=wl-paste --watch cliphist store
 
 # autostart my applications
-exec-once=$spotify && hyprctl dispatch movetoworkspacesilent,4,^(spotify)$
+exec-once=$spotify && sleep 2 && hyprctl dispatch movetoworkspacesilent,4,^(spotify)$
 exec-once=$discord
 exec-once=$nextcloud
 exec-once=$steam
@@ -402,9 +406,8 @@ exec-once=$torrent
 exec-once=swayidle -w \
                   timeout 300 '~/.config/hypr/scripts/swayIdleLocker &' \
                   timeout 420 'hyprctl dispatch dpms off' \
-			  resume 'hyprctl dispatch dpms on' \
+			                resume 'hyprctl dispatch dpms on' \
                   before-sleep '~/.config/hypr/scripts/swayLocker &'
 
 # unused
 #exec-once="kanshi -c $HOME/.config/hypr/kanshi/config"
-
