--- a/.config/kitty/test.conf
+++ b/.config/kitty/test.conf
@@ -4,23 +4,25 @@ selection_background #ffffff
 foreground #ffffff
 background #000000
 
-color0    #000000
-color1    #ffffff
-color2    #ffffff
-color3    #ffffff
-color4    #ffffff
-color5    #ffffff
-color6    #ffffff
-color7    #333333
-color8    #ffffff
-color9    #ffffff
-color10   #ffffff
-color11   #ffffff
-color12   #ffffff
-color13   #ffffff
-color14   #ffffff
-color15   #ffffff
-color16   #ffffff
+cursor       #a1a1a1
+
+color0       #030303
+color8       #707070
+color1       #212121
+color9       #212121
+color2       #252525
+color10      #252525
+color3       #2B2B2B
+color11      #2B2B2B
+color4       #333333
+color12      #333333
+color5       #3B3B3B
+color13      #3B3B3B
+color6       #464646
+color14      #464646
+color7       #a1a1a1
+color15      #a1a1a1
+
 
 #color0   #000000 # black
 #color1   #5f8787 # aqua
@@ -45,9 +47,6 @@ inactive_tab_foreground #666666
 inactive_tab_background #000000
 
 active_border_color #ffffff
-
-# Background
-#background_opacity 0.0
 
 # Fonts 
 font_family      Source Code Pro
