more styling changes

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -348,7 +348,7 @@ bind=ALT,TAB,workspace,previous
 #-- Automatically Move Windows to Workspaces -----------------------------
 windowrulev2=workspace 1 silent,class:firefox
 windowrulev2=workspace 2 silent,class:dolphin
-windowrulev2=workspace 3 silent,class:^(discord)$,title:^(Discord Updater)$
+windowrulev2=workspace 3 silent,class:^(discord)$,title:^(discord)$(.*)
 windowrulev2=workspace 4 silent,class:^(spotify)$
 windowrulev2=workspace 5 silent,class:libreoffice
 windowrulev2=workspace 6 silent,class:thunderbird
@@ -406,7 +406,7 @@ exec-once=$torrent
 exec-once=swayidle -w \
                   timeout 300 '~/.config/hypr/scripts/swayIdleLocker &' \
                   timeout 420 'hyprctl dispatch dpms off' \
-			                resume 'hyprctl dispatch dpms on' \
+			   resume 'hyprctl dispatch dpms on' \
                   before-sleep '~/.config/hypr/scripts/swayLocker &'
 
 # unused
