--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -51,8 +51,6 @@ general {
     col.active_border=0x30ffffff
     col.inactive_border=0x30000000
 
-    damage_tracking=full
-
     layout=dwindle
 }
 
@@ -108,10 +106,10 @@ binds {
 }
 
 #-- Dwindle Layout -------------------------------------------------------
+
 dwindle {
     pseudotile=0 # enable pseudotiling on dwindle
 }
-
 
 #-- Window Rules ---------------------------------------------------------
 
@@ -164,7 +162,6 @@ windowrule=center,^(nm\-connection\-editor)$
 windowrule=center,Nextcloud
 windowrule=center,^(sysupdate)$
 windowrule=center,blueman-manager
-windowrulev2=center,class:^(Steam)$
 windowrule=center,mpv
 windowrule=center,title:^(Nextcloud)$
 windowrule=center,solaar
@@ -191,6 +188,9 @@ windowrule=noblur, com-group_finity-mascot-Main
 #windowrule=nofocus, com-group_finity-mascot-Main
 windowrule=noshadow, com-group_finity-mascot-Main
 windowrule=noborder, com-group_finity-mascot-Main
+
+# Blur wofi
+blurls=wofi
 
 
 #-- App Bindings ---------------------------------------------------------
@@ -401,10 +401,7 @@ exec-once=$discord_overlay
 exec-once=$torrent
 
 # idle lock
-exec-once=swayidle -w \\
-                  timeout 300 '~/.config/hypr/scripts/swayIdleLocker &' \\
-                  timeout 420 'hyprctl dispatch dpms off' \\
-			   resume 'hyprctl dispatch dpms on' \\ 
-                  before-sleep '~/.config/hypr/scripts/swayLocker &'
+exec-once=bash ~/.config/hypr/scripts/swayIdleLauncher
+
 # unused
 #exec-once="kanshi -c $HOME/.config/hypr/kanshi/config"
