--- a/.config/qt6ct/qt6ct.conf
+++ b/.config/qt6ct/qt6ct.conf
@@ -24,7 +24,7 @@ underline_shortcut=1
 wheel_scroll_lines=3
 
 [SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\x14\0\0\aY\0\0\x3\xee\0\0\0\0\0\0\0\x14\0\0\aY\0\0\x3\xee\0\0\0\0\0\0\0\0\a\x80\0\0\0\0\0\0\0\x14\0\0\aY\0\0\x3\xee)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\ai\0\0\x3\xef\0\0\0\0\0\0\0\0\0\0\ai\0\0\x3\xef\0\0\0\0\0\0\0\0\a\x80\0\0\0\0\0\0\0\0\0\0\ai\0\0\x3\xef)
 
 [Troubleshooting]
 force_raster_widgets=1
