--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -88,8 +88,7 @@ decoration {
 
 animations {
     enabled=1
-    use_resize_transitions=false # no, fuck off
-
+    
     animation=windows,1,4,default,slide
     animation=border,1,4,default
     animation=fade,1,4,default
@@ -362,13 +361,12 @@ windowrulev2=workspace 12 silent,class:^(com.nextcloud.desktopclient.nextcloud)$
 
 #-- Startup --------------------------------------------------------------
 
-# Screensharing, please?
-#exec-once=dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-#exec-once=systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-
 # polkit & keyring daemon
 exec-once=/usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once=gnome-keyring-daemon --start
+
+# set cursor theme
+exec-once=hyprctl setcursor Qogir 16
 
 # background services
 exec-once=akonadictl start
