--- a/.config/qt5ct/qt5ct.conf
+++ b/.config/qt5ct/qt5ct.conf
@@ -25,7 +25,7 @@ underline_shortcut=1
 wheel_scroll_lines=3
 
 [SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\x38\0\0\ai\0\0\x4'\0\0\0\0\0\0\0\x38\0\0\x2\xde\0\0\x3!\0\0\0\0\x2\0\0\0\a\x80\0\0\0\0\0\0\0\x38\0\0\ai\0\0\x4')
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\ai\0\0\x3\xef\0\0\0\0\0\0\0\0\0\0\x2\xde\0\0\x2\xe9\0\0\0\0\x2\0\0\0\a\x80\0\0\0\0\0\0\0\0\0\0\ai\0\0\x3\xef)
 
 [Troubleshooting]
 force_raster_widgets=1
