--- a/.config/qt5ct/qt5ct.conf
+++ b/.config/qt5ct/qt5ct.conf
@@ -2,7 +2,7 @@
 color_scheme_path=/usr/share/qt5ct/colors/darker.conf
 custom_palette=false
 icon_theme=Tela-black-dark
-standard_dialogs=kde
+standard_dialogs=default
 style=kvantum-dark
 
 [Fonts]
