--- a/.config/qt5ct/qt5ct.conf
+++ b/.config/qt5ct/qt5ct.conf
@@ -1,13 +1,13 @@
 [Appearance]
-color_scheme_path=/usr/share/qt5ct/colors/darker.conf
+color_scheme_path=/usr/share/qt5ct/colors/airy.conf
 custom_palette=false
 icon_theme=Tela-black-dark
 standard_dialogs=default
 style=kvantum-dark
 
 [Fonts]
-fixed=@Variant(\0\0\0@\0\0\0\x14\0S\0\x61\0n\0s\0 \0S\0\x65\0r\0i\0\x66@\"\0\0\0\0\0\0\xff\xff\xff\xff\x5\x1\0\x32\x10)
-general=@Variant(\0\0\0@\0\0\0\x14\0S\0\x61\0n\0s\0 \0S\0\x65\0r\0i\0\x66@\"\0\0\0\0\0\0\xff\xff\xff\xff\x5\x1\0\x32\x10)
+fixed=@Variant(\0\0\0@\0\0\0\"\0N\0o\0t\0o\0 \0S\0\x61\0n\0s\0 \0\x44\0i\0s\0p\0l\0\x61\0y@(\0\0\0\0\0\0\xff\xff\xff\xff\x5\x1\0\x32\x10)
+general=@Variant(\0\0\0@\0\0\0\"\0N\0o\0t\0o\0 \0S\0\x61\0n\0s\0 \0\x44\0i\0s\0p\0l\0\x61\0y@(\0\0\0\0\0\0\xff\xff\xff\xff\x5\x1\0\x32\x10)
 
 [Interface]
 activate_item_on_single_click=1
@@ -25,7 +25,7 @@ underline_shortcut=1
 wheel_scroll_lines=3
 
 [SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\ai\0\0\x3\xef\0\0\0\0\0\0\0\0\0\0\x2\xde\0\0\x2\xe9\0\0\0\0\x2\0\0\0\a\x80\0\0\0\0\0\0\0\0\0\0\ai\0\0\x3\xef)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\x3\xad\0\0\x3\xef\0\0\0\0\0\0\0\0\0\0\x2\xde\0\0\x3%\0\0\0\0\x2\0\0\0\a\x80\0\0\0\0\0\0\0\0\0\0\x3\xad\0\0\x3\xef)
 
 [Troubleshooting]
 force_raster_widgets=1
