--- a/.config/qt6ct/qt6ct.conf
+++ b/.config/qt6ct/qt6ct.conf
@@ -1,12 +1,13 @@
 [Appearance]
-color_scheme_path=/usr/share/qt6ct/colors/dusk.conf
+color_scheme_path=/usr/share/qt6ct/colors/airy.conf
 custom_palette=false
+icon_theme=Tela-black-dark
 standard_dialogs=default
-style=kvantum-dark
+style=kvantum
 
 [Fonts]
-fixed=@Variant(\0\0\0@\0\0\0\x1e\0\x44\0\x65\0j\0\x61\0V\0u\0 \0L\0G\0\x43\0 \0S\0\x61\0n\0s@(\0\0\0\0\0\0\xff\xff\xff\xff\x5\x1\0\x32\x10)
-general=@Variant(\0\0\0@\0\0\0\x1e\0\x44\0\x65\0j\0\x61\0V\0u\0 \0L\0G\0\x43\0 \0S\0\x61\0n\0s@(\0\0\0\0\0\0\xff\xff\xff\xff\x5\x1\0\x32\x10)
+fixed="DejaVu LGC Sans,12,-1,5,400,0,0,0,0,0,0,0,0,0,0,1"
+general="DejaVu LGC Sans,12,-1,5,400,0,0,0,0,0,0,0,0,0,0,1"
 
 [Interface]
 activate_item_on_single_click=1
@@ -18,7 +19,7 @@ gui_effects=@Invalid()
 keyboard_scheme=2
 menus_have_icons=true
 show_shortcuts_in_context_menus=true
-stylesheets=@Invalid()
+stylesheets=/usr/share/qt6ct/qss/fusion-fixes.qss, /usr/share/qt6ct/qss/scrollbar-simple.qss, /usr/share/qt6ct/qss/sliders-simple.qss, /usr/share/qt6ct/qss/tooltip-simple.qss, /usr/share/qt6ct/qss/traynotification-simple.qss
 toolbutton_style=4
 underline_shortcut=1
 wheel_scroll_lines=3
