update hyprland configurations

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -8,24 +8,25 @@ $notes=kitty --class Notes -e nvim ~/Documents/Cloud/Notes/notes-"$(date +%Y%d%m
 $mailer=thunderbird
 $browser=firefox
 $filemanager=dolphin
-$calendar=kalendar
-$videcon=XDG_SESSION_TYPE=x11 zoom
-$discord=discord-canary 
+$calendar=gnome-calendar
+$discord=webcord
 $discord_overlay=discord_overlay
 $spotify=spotify
 $office=libreoffice
 $nextcloud=nextcloud
 $steam=steam-native
 $librewolf=librewolf
+$torrent=qbittorrent --no-splash
+
 $wobpipe=/tmp/wobpipe
 $xobpipe=/tmp/xobpipe
+
 $lock=playerctl --player=spotify,firefox,mpv -a pause ; ~/.config/hypr/scripts/swayLocker
 $idlelock=playerctl --player=spotify,firefox,mpv -a pause ; ~/.config/hypr/scripts/swayIdleLocker
-$torrent=qbittorrent
 
 #-- Output ---------------------------------------------------------------
 monitor=HDMI-A-1,1920x1080@60,0x0,1
-monitor=DP-1,1920x1080@60,0x0,1
+monitor=eDP-1,1920x1080@60,0x0,1
 
 #-- Configuration --------------------------------------------------------
 input {
@@ -48,7 +49,7 @@ general {
     gaps_out=8 #10
 
     border_size=3
-    col.active_border=0x30ffffff
+    col.active_border=0x00ffffff
     col.inactive_border=0x30000000
 
     layout=dwindle
@@ -64,10 +65,10 @@ misc {
 }
 
 decoration {
-    rounding=15
+    rounding=8
     multisample_edges=1
     blur=2
-    blur_size=5
+    blur_size=4
     blur_passes=2
     
     # Your blur "amount" is blur_size * blur_passes, but high blur_size (over around 5-ish) will produce artifacts.
@@ -189,6 +190,9 @@ windowrule=noblur, com-group_finity-mascot-Main
 windowrule=noshadow, com-group_finity-mascot-Main
 windowrule=noborder, com-group_finity-mascot-Main
 
+windowrulev2=forceinput,title:^(Warframe)$
+windowrulev2=forceinput,class:launcher.exe
+
 # Blur wofi
 blurls=wofi
 
@@ -206,9 +210,6 @@ bind=SUPER,F3,exec,$discord
 bind=SUPER,F4,exec,$spotify
 bind=SUPER,F5,exec,$office
 bind=SUPER,F6,exec,$mailer
-bind=SUPER,F7,exec,$videcon
-bind=SUPER,F8,exec,$calendar
-bind=SUPER,F9,exec,$steam
 
 # Exiting and Locking
 bind=SUPER,E,exec,wlogout -p layer-shell
@@ -347,13 +348,12 @@ bind=ALT,TAB,workspace,previous
 windowrulev2=workspace 1 silent,class:^(firefox)(.*)$
 windowrulev2=workspace 2 silent,class:dolphin
 windowrulev2=workspace 3 silent,class:^(discord)$
+windowrulev2=workspace 3 silent,class:^(webcord)$
 windowrulev2=workspace 4 silent,class:^(spotify)$
 windowrulev2=workspace 5 silent,class:libreoffice
 windowrulev2=workspace 6 silent,class:thunderbird
-windowrulev2=workspace 6 silent,class:kalendar
-windowrulev2=workspace 7 silent,class:^(zoom)$
-windowrulev2=workspace 8 silent,class:^(gamescope)$
-windowrulev2=workspace 9 silent,class:^(Steam)$
+windowrulev2=workspace 7 silent,class:Calendar
+windowrulev2=workspace 8 silent,class:^(zoom)$
 windowrulev2=workspace 9 silent,class:^(Steam)$
 windowrulev2=workspace 10 silent,class:krita
 windowrulev2=workspace 11 silent,class:^(org.qbittorrent.qBittorrent)$
@@ -369,12 +369,10 @@ exec-once=gnome-keyring-daemon --start
 exec-once=hyprctl setcursor Qogir 16
 
 # background services
-exec-once=akonadictl start
 exec-once=bash ~/.config/hypr/scripts/launchWallpaper > /dev/null
 exec-once="swaync"
 exec-once="waybar"
 exec-once="gammastep"
-exec-once=thunderbird
 exec-once=rm -f $wobpipe && mkfifo $wobpipe && tail -f $wobpipe | wob
 #exec-once=rm -f $xobpipe && mkfifo $xobpipe && tail -f $xobpipe | xob
 
@@ -387,17 +385,16 @@ exec-once=gammastep-indicator
 exec-once=solaar --window=hide
 
 # clipboard
-#exec-once=wl-clipboard-history -t
 exec-once=wl-clip-persist --clipboard regular
 exec-once=wl-paste --watch cliphist store
 
 # autostart my applications
-exec-once=$spotify
-exec-once=$discord
-exec-once=$nextcloud
-exec-once=$steam
-exec-once=$discord_overlay
-exec-once=$torrent
+exec-once=[workspace 3 silent] $discord
+exec-once=[workspace 4 silent] $spotify
+exec-once=[workspace 6 silent] $mailer
+exec-once=[workspace 7 silent] $calendar
+exec-once=[workspace 11 silent] $torrent
+exec-once=[workspace 12 silent] $nextcloud
 
 # idle lock
 exec-once=bash ~/.config/hypr/scripts/swayIdleLauncher
