manually start portals needed by hyprland

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -361,15 +361,16 @@ windowrulev2=workspace 12 silent,class:^(com.nextcloud.desktopclient.nextcloud)$
 
 #-- Startup --------------------------------------------------------------
 
-# polkit & keyring daemon
+# portals, polkit & keyring daemon
 exec-once=/usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once=gnome-keyring-daemon --start
-
+exec-once=~/.config/hypr/scripts/hyprInit > /dev/null
 # set cursor theme
 exec-once=hyprctl setcursor Qogir 16
 
 # background services
-exec-once=bash ~/.config/hypr/scripts/launchWallpaper > /dev/null
+#exec-once=bash ~/.config/hypr/scripts/launchWallpaper > /dev/null
+exec-once=hyprpaper
 exec-once="swaync"
 exec-once="waybar"
 exec-once="gammastep"
@@ -393,6 +394,7 @@ exec-once=[workspace 3 silent] $discord
 exec-once=[workspace 4 silent] $spotify
 exec-once=[workspace 6 silent] $mailer
 exec-once=[workspace 7 silent] $calendar
+exec-once=[workspace 9 silent] $steam
 exec-once=[workspace 11 silent] $torrent
 exec-once=[workspace 12 silent] $nextcloud
 
