--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -62,6 +62,11 @@ misc {
    enable_swallow=true
    layers_hog_keyboard_focus=true
    swallow_regex=^(kitty)$
+
+   mouse_move_focuses_monitor=true
+
+   animate_manual_resizes = no
+   animate_mouse_windowdragging = no
 }
 
 decoration {
@@ -79,11 +84,13 @@ decoration {
     blur_ignore_opacity=true
  
     drop_shadow=true
-    shadow_range=6
+    shadow_range=8
+    shadow_offset= 5 5 
     shadow_ignore_window=false
+    shadow_render_power=5
 
     dim_inactive=true
-    dim_strength=0.3
+    dim_strength=0.2
 
 }
 
@@ -113,15 +120,6 @@ dwindle {
 }
 
 #-- Window Rules ---------------------------------------------------------
-
-## Example window rules ##
-# for windows named/classed as abc and xyz
-#windowrule=move 69 420,abc
-#windowrule=tile,xyz
-#windowrule=float,abc
-#windowrule=pseudo,abc
-#windowrule=monitor 0,xyz
-
 windowrulev2=float,class:^(Steam)$
 windowrule=float,^(sysupdate)$
 
@@ -168,7 +166,7 @@ windowrule=center,title:^(Nextcloud)$
 windowrule=center,solaar
 windowrule=center,^(Notes)$
 
-windowrule=opacity 0.70,kitty
+windowrule=opacity 0.5 0.5,kitty
 windowrule=opacity 1.0,Alacritty
 
 windowrule=opaque,StardewModdingAPI
@@ -196,6 +194,8 @@ windowrulev2=forceinput,class:launcher.exe
 # Blur wofi
 blurls=wofi
 
+
+windowrulev2 = idleinhibit always,class:^(firefox)$
 
 #-- App Bindings ---------------------------------------------------------
 bind=SUPER,Return,exec,$term
@@ -362,19 +362,19 @@ windowrulev2=workspace 12 silent,class:^(com.nextcloud.desktopclient.nextcloud)$
 #-- Startup --------------------------------------------------------------
 
 # portals, polkit & keyring daemon
-exec-once=/usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-exec-once=gnome-keyring-daemon --start
-exec-once=~/.config/hypr/scripts/hyprInit > /dev/null
+exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+exec-once = gnome-keyring-daemon --start
+exec-once = ~/.config/hypr/scripts/hyprInit
 # set cursor theme
-exec-once=hyprctl setcursor Qogir 16
+exec-once = hyprctl setcursor Qogir 16
 
 # background services
 #exec-once=bash ~/.config/hypr/scripts/launchWallpaper > /dev/null
-exec-once=hyprpaper
-exec-once="swaync"
-exec-once="waybar"
-exec-once="gammastep"
-exec-once=rm -f $wobpipe && mkfifo $wobpipe && tail -f $wobpipe | wob
+exec-once = hyprpaper
+exec-once = "swaync"
+exec-once = "waybar"
+exec-once = "gammastep"
+exec-once = rm -f $wobpipe && mkfifo $wobpipe && tail -f $wobpipe | wob
 #exec-once=rm -f $xobpipe && mkfifo $xobpipe && tail -f $xobpipe | xob
 
 
