--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,7 +1,8 @@
-preload = /home/notashelf/Pictures/Wallpapers/Colored/1146917.jpg
-preload = /home/notashelf/Pictures/Wallpapers/Colored/wallhaven-zmw7dw.png
-# .. more preloads
+#preload = /home/notashelf/Pictures/Wallpapers/Colored/1146917.jpg
+#preload = /home/notashelf/Pictures/Wallpapers/Colored/wallhaven-zmw7dw.png
+preload = /home/notashelf/Pictures/Wallpapers/Monochrome/Light/Raven.png
 
 #wallpaper = HDMI-A-1,/home/notashelf/Pictures/Wallpapers/Colored/1146917.jpg
-wallpaper = HDMI-A-1,/home/notashelf/Pictures/Wallpapers/Colored/wallhaven-zmw7dw.png
-# .. more monitors
+#wallpaper = HDMI-A-1,/home/notashelf/Pictures/Wallpapers/Colored/wallhaven-zmw7dw.png
+wallpaper = HDMI-A-1,/home/notashelf/Pictures/Wallpapers/Monochrome/Light/Raven.png
+
